<resources>
    <string name="app_name">PhotoScape</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_fbauth">ActivityFBAuth</string>

    <!-- Strings related to main map activity -->
    <string name="sign_out_button">Sign Out</string>

    <!-- Strings related to the create pin fragment -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_pin_name">Name</string>
    <string name="photo_text_view">Photo:</string>
    <string name="upload_text_view">Upload:</string>
    <string name="description_text_view">Description:</string>
    <string name="best_photo_time_text_view">Best Time for Photo:</string>
    <string name="instructions_text_view">Instructions</string>
    <string name="save_pin_button">Save</string>
    <string name="discard_button">Discard</string>
    <!-- Strings for spinners -->
    <string-array name="best_Photo_Time">
        <item>Sunrise</item>
        <item>Sunset</item>
        <item>Midday</item>
        <item>Night</item>
        <item>Any</item>
    </string-array>
    <string name="my_pins_activity">MyPins</string>
    
    <!-- Strings used for My Pins Activity -->
    <string name="my_pins">My Pins</string>

    <!-- Strings used for bottom Nav Bar -->
    <string name="nav_bar_menu2">Account</string>

    <string name="photo_preview">photoPreview</string>

    <!-- Strings used for create pin -->
    <string name="review_name">Name:</string>
    <string name="review_photo">Photo:</string>
    <string name="review_photo_description">photoPreview</string>
    <string name="review_upload">Upload:</string>
    <string name="review_description">Description:</string>
    <string name="review_best_photo_time">Best Time:</string>
    <string name="review_instructions">Instructions</string>
    <string name="review_upload_button">Upload</string>
    <string name="review_discard">Discard</string>
    <string name="review_save">Save</string>

</resources>
