<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="visible"
    tools:context=".CreatePin"
    android:background="#FFFFFF">

    <ScrollView
        android:layout_width="340dp"
        android:layout_height="508dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/dialog_holo_light_frame"
            tools:backgroundTint="@color/common_google_signin_btn_text_dark_default">

            <ImageView
                android:id="@+id/photoPreview"
                android:layout_width="279dp"
                android:layout_height="156dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/review_photo_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.333"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/photoTextView"
                tools:srcCompat="@tools:sample/backgrounds/scenic[1]" />

            <EditText
                android:id="@+id/editPinName"
                android:layout_width="279dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/create_pin_name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.333"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/photoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:text="@string/review_photo"
                app:layout_constraintBottom_toTopOf="@+id/editPinName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editPinName"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/uploadTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="192dp"
                android:text="@string/review_upload"
                app:layout_constraintEnd_toStartOf="@+id/importPhotoButton"
                app:layout_constraintTop_toBottomOf="@+id/photoPreview" />

            <ImageButton
                android:id="@+id/importPhotoButton"
                android:layout_width="31dp"
                android:layout_height="22dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="32dp"
                android:contentDescription="@string/review_upload_button"
                android:src="@android:drawable/ic_menu_upload"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/photoPreview" />

            <EditText
                android:id="@+id/editPinDescription"
                android:layout_width="279dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/description_text_view"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.511"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/importPhotoButton" />

            <TextView
                android:id="@+id/bestPhotoTimeTextView"
                android:layout_width="131dp"
                android:layout_height="23dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:text="@string/review_best_photo_time"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editPinDescription" />

            <Spinner
                android:id="@+id/bestPhotoTimeSpinner"
                android:layout_width="143dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/bestPhotoTimeTextView"
                app:layout_constraintTop_toBottomOf="@+id/editPinDescription" />

            <EditText
                android:id="@+id/editPinInstructions"
                android:layout_width="279dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/instructions_text_view"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.512"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bestPhotoTimeTextView" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="36dp"
                android:layout_marginBottom="8dp"
                android:background="@color/colorPrimary"
                android:text="@string/review_save"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editPinInstructions" />

            <Button
                android:id="@+id/discardButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/colorPrimary"
                android:text="@string/review_discard"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editPinInstructions"
                app:layout_constraintVertical_bias="1.0" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>